--- a/index.html
+++ b/index.html
@@ -43,11 +43,14 @@
       <a href="artist_bio.html">Bio 🧬</a>
       <a href="Eco_illum.html" class="eco-link">Eco-Illum 🌘</a>
       <a href="workshops.html">Workshops 🎨</a>
+      <!-- temp shop -->
       <div class="dropdown">
-        <a href="javascript:void(0)" class="dropbtn">Shop 👜</a>
+        <a href="#" class="dropbtn">Shop 👜</a>
         <div class="dropdown-content">
-          <a href="https://annreflectionarts.square.site/">Cards & Items</a>
-          <a href="https://annreflection.square.site/">Original Paintings</a>
+          <a href="https://annreflection.square.site/shop/sumi-e-painting-large-banner/7">Original Paintings</a>
+          <a href="https://ko-fi.com/c/e004b270d4">Cards & Commissions ($6)</a>
+          <a href="https://annreflectionarts.square.site/shop/suprise-packs/25">Surprise Packs ($5)</a>
+          <a href="https://register.inclusionartshow.com/product-category/ann-k-chou/">Inclusion Art Show</a>
         </div>
       </div>
 
@@ -346,7 +349,8 @@
     </section>
 
     <section id="support">
-      <h2>Support My Practice</h2>
+     
+      <!--<h2>Support My Practice</h2>
       <p>
         You can browse lantern sketches, sumi-e cards, and sensory objects in my 
         <a href="https://annreflectionarts.square.site/">Art Shop</a>.
@@ -354,7 +358,15 @@
         <a href="https://annreflection.square.site/">Originals Gallery</a>.
         Or support small works and donations through 
         <a href="https://ko-fi.com/annreflection">Ko-fi</a>.
-      </p>
+      </p>-->
+      <h2>Available to Support or Collect</h2>
+      <ul>
+        <li><a href="https://ko-fi.com/c/e004b270d4">🎨 $6 Custom Art Cards via Ko-fi</a></li>
+        <li><a href="https://annreflection.square.site/shop/sumi-e-painting-large-banner/7">🖼️ Original Sumi-e Paintings</a></li>
+        <li><a href="https://annreflectionarts.square.site/shop/suprise-packs/25">🎁 $5 Surprise Packs</a></li>
+        <li><a href="https://register.inclusionartshow.com/product-category/ann-k-chou/">🌐 Inclusion Art Show Listings</a></li>
+      </ul>
+
       <p>
         While I’m still refining shipping options, these platforms help sustain accessible arts research and inclusive workshops.
       </p>
