--- a/workshops.html
+++ b/workshops.html
@@ -29,7 +29,16 @@
     <a href="artist_bio.html">Bio 🧬</a>
     <a href="Eco_illum.html">Eco-Illum 🌘</a>
     <a class="active" href="workshops.html">Workshops 🎨</a>
-    <a href="https://annreflection.square.site/">ArtShop 👜</a>
+     <!-- temp shop -->
+      <div class="dropdown">
+        <a href="#" class="dropbtn">Shop 👜</a>
+        <div class="dropdown-content">
+          <a href="https://annreflection.square.site/shop/sumi-e-painting-large-banner/7">Original Paintings</a>
+          <a href="https://ko-fi.com/c/e004b270d4">Cards & Commissions ($6)</a>
+          <a href="https://annreflectionarts.square.site/shop/suprise-packs/25">Surprise Packs ($5)</a>
+          <a href="https://register.inclusionartshow.com/product-category/ann-k-chou/">Inclusion Art Show</a>
+        </div>
+      </div>
     <button id="darkModeToggle" class="button-ghost" onclick="toggleDarkMode()">🌙</button>
     <a href="javascript:void(0);" class="icon" onclick="myFunction()">
       <i class="fa fa-bars"></i>
