--- a/index.html
+++ b/index.html
@@ -350,8 +350,8 @@
 
     <section id="support">
      
-      <!--<h2>Support My Practice</h2>
-      <p>
+      <h2>Support My Practice</h2>
+      <!--<p>
         You can browse lantern sketches, sumi-e cards, and sensory objects in my 
         <a href="https://annreflectionarts.square.site/">Art Shop</a>.
         Looking for one-of-a-kind plein-air or large sumi-e work? Visit the 
@@ -359,8 +359,8 @@
         Or support small works and donations through 
         <a href="https://ko-fi.com/annreflection">Ko-fi</a>.
       </p>-->
-      <h2>Available to Support or Collect</h2>
-      <ul>
+      <p>Available to Support or Collect</p>
+      <ul class="shop-links">
         <li><a href="https://ko-fi.com/c/e004b270d4">🎨 $6 Custom Art Cards via Ko-fi</a></li>
         <li><a href="https://annreflection.square.site/shop/sumi-e-painting-large-banner/7">🖼️ Original Sumi-e Paintings</a></li>
         <li><a href="https://annreflectionarts.square.site/shop/suprise-packs/25">🎁 $5 Surprise Packs</a></li>
