--- a/workshops.html
+++ b/workshops.html
@@ -47,12 +47,16 @@
 </header>
 
 <div class="icon-bar" aria-label="Social media links">
-  <a href="https://www.instagram.com/annreflection/" aria-label="Instagram"><i class="fa fa-instagram"></i></a>
-  <a href="https://www.facebook.com/AnnReflectionArts/" aria-label="Facebook"><i class="fa fa-facebook"></i></a>
-  <a href="https://linkedin.com/in/annkchou" aria-label="LinkedIn"><i class="fa fa-linkedin"></i></a>
-  <a href="https://www.youtube.com/@annchou9171" aria-label="YouTube"><i class="fa fa-youtube"></i></a>
-  <a href="https://www.flickr.com/photos/annchou/" aria-label="Flickr"><i class="fa fa-flickr"></i></a>
-  <a href="https://annreflection.substack.com" class="substack"><i class="fa fa-stack-exchange"></i></a>
+    <!-- ... other social icons ... -->
+    <a href="https://www.instagram.com/annreflection/" class="instagram"><i class="fa fa-instagram"></i></a>
+    <a href="https://www.facebook.com/AnnReflectionArts/" class="facebook"><i class="fa fa-facebook"></i></a>
+    <a href="https://linkedin.com/in/annkchou" class="linkedin"><i class="fa fa-linkedin"></i></a>
+    <a href="http://www.youtube.com/@annchou9171" class="youtube"><i class="fa fa-youtube"></i></a>
+    <a href="https://www.flickr.com/photos/annchou/" class="twitter"><i class="fa fa-flickr"></i></a>
+    <a href="https://annreflection.substack.com" class="substack"><i class="fa fa-stack-exchange"></i></a>
+
+    <!-- ✅ Optional second toggle at the bottom -->
+    <button id="darkModeToggleIconBar" aria-label="Toggle dark mode" title="Toggle dark mode">🌙</button>
 </div>
 
 <!-- ✅ HERO SECTION -->
@@ -156,24 +160,74 @@
 </footer>
 
 <script>
-  function toggleDarkMode() {
-    const body = document.body;
-    const toggleBtn = document.getElementById('darkModeToggle');
-    body.classList.toggle('dark-mode');
-    toggleBtn.textContent = body.classList.contains('dark-mode') ? '☀️' : '🌙';
+  function handleDarkModeToggle() {
+    const isDark = document.body.classList.toggle('dark-mode');
+    localStorage.setItem('darkMode', isDark ? 'enabled' : 'disabled');
+    updateDarkModeIcons(isDark);
+  }
+
+  function updateDarkModeIcons(isDark) {
+    const icons = [
+      document.getElementById('darkModeToggle'),
+      document.getElementById('darkModeToggleIconBar')
+    ];
+    icons.forEach(btn => {
+      if (btn) btn.textContent = isDark ? '☀️' : '🌙';
+    });
+  }
+
+  function initializeDarkMode() {
+    const savedDark = localStorage.getItem('darkMode');
+    const prefersDark = window.matchMedia('(prefers-color-scheme: dark)').matches;
+    const shouldEnable = savedDark === 'enabled' || (!savedDark && prefersDark);
+
+    if (shouldEnable) document.body.classList.add('dark-mode');
+    updateDarkModeIcons(document.body.classList.contains('dark-mode'));
+
+    // Bind listeners to both toggles
+    const topToggle = document.getElementById('darkModeToggle');
+    const barToggle = document.getElementById('darkModeToggleIconBar');
+    if (topToggle) topToggle.addEventListener('click', handleDarkModeToggle);
+    if (barToggle) barToggle.addEventListener('click', handleDarkModeToggle);
+  }
+
+  function initializeAccordion() {
+    document.querySelectorAll('.accordion-toggle').forEach(button => {
+      const content = button.nextElementSibling;
+      if (!content) return;
+
+      const label = button.dataset.label || button.textContent.replace(/🔻|🔺/g, '').trim();
+      content.style.maxHeight = '0px';
+      content.style.overflow = 'hidden';
+      content.style.transition = 'max-height 0.5s ease';
+
+      button.textContent = `🔻 ${label}`;
+      button.setAttribute('aria-expanded', false);
+
+      button.addEventListener('click', () => {
+        const isOpen = button.classList.toggle('active');
+        content.style.maxHeight = isOpen ? content.scrollHeight + 'px' : '0px';
+        button.textContent = isOpen ? `🔺 ${label}` : `🔻 ${label}`;
+        button.setAttribute('aria-expanded', isOpen);
+      });
+    });
+  }
+
+  function initializeResponsiveNav() {
+    const navBtn = document.querySelector('.topnav .icon');
+    if (navBtn) {
+      navBtn.addEventListener('click', () => {
+        const nav = document.getElementById('myTopnav');
+        nav.classList.toggle('responsive');
+      });
+    }
   }
 
   window.addEventListener('DOMContentLoaded', () => {
-    const toggleBtn = document.getElementById('darkModeToggle');
-    if (document.body.classList.contains('dark-mode')) {
-      toggleBtn.textContent = '☀️';
-    }
+    initializeDarkMode();
+    initializeAccordion();
+    initializeResponsiveNav();
   });
-
-  function myFunction() {
-    const nav = document.getElementById("myTopnav");
-    nav.classList.toggle("responsive");
-  }
 </script>
 
 </body>
