--- a/Eco_illum.html
+++ b/Eco_illum.html
@@ -71,14 +71,16 @@
   <img src="rss/AnnChou_eco4_draytrip_dragon_owl_duo_Trout Lake.jpg" alt="Dragon and owl duo installation near Trout Lake" />
 </div>  -->
 
-
-  <div class="icon-bar">
+  <!-- ✅ Floating Social Icon Bar -->
+ <div class="icon-bar" aria-label="Social media links">
     <a href="https://www.instagram.com/annreflection/" class="instagram"><i class="fa fa-instagram"></i></a>
     <a href="https://www.facebook.com/AnnReflectionArts/" class="facebook"><i class="fa fa-facebook"></i></a>
     <a href="https://linkedin.com/in/annkchou" class="linkedin"><i class="fa fa-linkedin"></i></a>
     <a href="http://www.youtube.com/@annchou9171" class="youtube"><i class="fa fa-youtube"></i></a>
     <a href="https://www.flickr.com/photos/annchou/" class="twitter"><i class="fa fa-flickr"></i></a>
     <a href="https://annreflection.substack.com" class="substack"><i class="fa fa-stack-exchange"></i></a>
+    <!-- ✅ Optional second toggle at the bottom -->
+    <button id="darkModeToggleIconBar" aria-label="Toggle dark mode" title="Toggle dark mode">🌙</button>
   </div>
 
 
@@ -229,13 +231,6 @@
     </div>
   </footer>
 
-  <script>
-    function myFunction() {
-      const x = document.getElementById("myTopnav");
-      x.className = x.className === "topnav" ? "topnav responsive" : "topnav";
-    }
-  </script>
-
   <script src="https://storage.ko-fi.com/cdn/scripts/overlay-widget.js"></script>
   <script>
     kofiWidgetOverlay.draw('annreflection', {
@@ -246,14 +241,6 @@
     });
   </script>
   
-  <script>
-  document.getElementById('toggle-dark').addEventListener('click', () => {
-    document.body.classList.toggle('dark-mode');
-    const current = document.body.classList.contains('dark-mode') ? 'Light Mode' : 'Dark Mode';
-    document.getElementById('toggle-dark').textContent = current === 'Light Mode' ? '☀️ Light Mode' : '🌜 Dark Mode';
-  });
-</script>
-
   <script>
   const filterButtons = document.querySelectorAll('.filter-btn');
   const galleryItems = document.querySelectorAll('.gallery-item');
@@ -275,46 +262,76 @@
   });
 </script>
 
-  <script>
-  function toggleDarkMode() {
-    const body = document.body;
-    const toggleBtn = document.getElementById('darkModeToggle');
-    body.classList.toggle('dark-mode');
+<script>
+  function handleDarkModeToggle() {
+    const isDark = document.body.classList.toggle('dark-mode');
+    localStorage.setItem('darkMode', isDark ? 'enabled' : 'disabled');
+    updateDarkModeIcons(isDark);
+  }
 
-    // Update icon
-    if (body.classList.contains('dark-mode')) {
-      toggleBtn.textContent = '☀️';
-    } else {
-      toggleBtn.textContent = '🌙';
+  function updateDarkModeIcons(isDark) {
+    const icons = [
+      document.getElementById('darkModeToggle'),
+      document.getElementById('darkModeToggleIconBar')
+    ];
+    icons.forEach(btn => {
+      if (btn) btn.textContent = isDark ? '☀️' : '🌙';
+    });
+  }
+
+  function initializeDarkMode() {
+    const savedDark = localStorage.getItem('darkMode');
+    const prefersDark = window.matchMedia('(prefers-color-scheme: dark)').matches;
+    const shouldEnable = savedDark === 'enabled' || (!savedDark && prefersDark);
+
+    if (shouldEnable) document.body.classList.add('dark-mode');
+    updateDarkModeIcons(document.body.classList.contains('dark-mode'));
+
+    // Bind listeners to both toggles
+    const topToggle = document.getElementById('darkModeToggle');
+    const barToggle = document.getElementById('darkModeToggleIconBar');
+    if (topToggle) topToggle.addEventListener('click', handleDarkModeToggle);
+    if (barToggle) barToggle.addEventListener('click', handleDarkModeToggle);
+  }
+
+  function initializeAccordion() {
+    document.querySelectorAll('.accordion-toggle').forEach(button => {
+      const content = button.nextElementSibling;
+      if (!content) return;
+
+      const label = button.dataset.label || button.textContent.replace(/🔻|🔺/g, '').trim();
+      content.style.maxHeight = '0px';
+      content.style.overflow = 'hidden';
+      content.style.transition = 'max-height 0.5s ease';
+
+      button.textContent = `🔻 ${label}`;
+      button.setAttribute('aria-expanded', false);
+
+      button.addEventListener('click', () => {
+        const isOpen = button.classList.toggle('active');
+        content.style.maxHeight = isOpen ? content.scrollHeight + 'px' : '0px';
+        button.textContent = isOpen ? `🔺 ${label}` : `🔻 ${label}`;
+        button.setAttribute('aria-expanded', isOpen);
+      });
+    });
+  }
+
+  function initializeResponsiveNav() {
+    const navBtn = document.querySelector('.topnav .icon');
+    if (navBtn) {
+      navBtn.addEventListener('click', () => {
+        const nav = document.getElementById('myTopnav');
+        nav.classList.toggle('responsive');
+      });
     }
   }
-  // Optional: set icon on load
+
   window.addEventListener('DOMContentLoaded', () => {
-    const toggleBtn = document.getElementById('darkModeToggle');
-    if (document.body.classList.contains('dark-mode')) {
-      toggleBtn.textContent = '☀️';
-    }
+    initializeDarkMode();
+    initializeAccordion();
+    initializeResponsiveNav();
   });
-
-  // Responsive nav toggle
-  function myFunction() {
-    const nav = document.getElementById("myTopnav");
-    nav.classList.toggle("responsive");
-  }  
-    
-  // Load saved mode
-  if (localStorage.getItem('mode') === 'dark') {
-    document.body.classList.add('dark-mode');
-  }
-
-  // Toggle and save mode
-  function toggleDarkMode() {
-    document.body.classList.toggle('dark-mode');
-    localStorage.setItem('mode', document.body.classList.contains('dark-mode') ? 'dark' : 'light');
-  }
 </script>
-
-<button onclick="toggleDarkMode()">Toggle Dark Mode</button>
 
 
 </body>
