--- a/index.html
+++ b/index.html
@@ -283,6 +283,27 @@
       </div>
     </div>
 
+    <!-- ePROMS Project Panel -->
+    <div class="project">
+      <h3>🩺 ePROMS Portal: Patient-Reported Symptom Interface</h3>
+      <figure class="figure-block">
+        <img src="rss/ePROMS_title.png" alt="ePROMS Portal thumbnail showing patient symptom entry interface.">
+        <figcaption>
+          Standards-based prototype for capturing PROMs using HL7 FHIR and LHC-Forms.
+        </figcaption>
+      </figure>
+      <button class="accordion-toggle">View Details</button>
+      <div class="accordion-content">
+        <p>This interface explores how patients can report symptoms using clinically validated questionnaires. Implemented partially via LHC-Forms and custom FHIR JSON, it demonstrates how PROMs like PHQ-9 can be modeled and mapped to SNOMED CT and LOINC standards.</p>
+        <p><strong>Status:</strong> Prototype — not a functional portal, but ready for integration into Patient Health Record (PHR) systems that support JSON-formatted, standards-compliant PROMs.</p>
+        <p><strong>Why it matters:</strong> Bridges patient voice and clinical structure, offering a design-led lens into participatory care tools and semantic interoperability.</p>
+        <p><strong>Tools & Standards:</strong> HL7 FHIR, LHC-Forms, JSON, LOINC, SNOMED CT</p>
+        <a class="button" href="https://annchou.github.io/eproms-portal/" target="_blank">Explore Simplified Report →</a>
+        <a class="button" href="https://github.com/AnnChou/eproms-portal" target="_blank">View Technical Repository →</a>
+      </div>
+    </div>
+
+
   </div>
 </section>
 
