--- a/index.html
+++ b/index.html
@@ -287,7 +287,7 @@
     <div class="project">
       <h3>🩺 ePROMS Portal: Patient-Reported Symptom Interface</h3>
       <figure class="figure-block">
-        <img src="rss/ePROMS_title.png" alt="ePROMS Portal thumbnail showing patient symptom entry interface.">
+        <img src="rss/ePROMS_banner.png" alt="ePROMS Portal thumbnail showing patient symptom entry interface.">
         <figcaption>
           Standards-based prototype for capturing PROMs using HL7 FHIR and LHC-Forms.
         </figcaption>
