add practise replace 2nd subtitle

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Ann K. Chou – Multi-sensory Artist, Access Designer, Artist-Scientist</title>
-  <meta name="description" content="Ann K. Chou is a Deaf, Hong Kong–born artist and access designer who creates inclusive installations, sensory lanterns, and participatory workshops across Vancouver and Victoria." />
+  <meta name="description" content="Ann K. Chou is a d/Deaf, Hong Kong–born artist and access designer who creates inclusive installations, sensory lanterns, and participatory workshops across Vancouver and Victoria." />
   <meta name="keywords" content="Ann Chou, artist, lantern maker, accessibility, Deaf artist, inclusive design, community art, Victoria BC, Vancouver BC, sensory art, sumi-e, light installation" />
   <meta name="author" content="Ann K. Chou" />
   <meta property="og:title" content="Ann K. Chou – Artist & Accessibility Advocate" />
@@ -114,7 +114,11 @@
         I create inclusive, sensory-based environments that spark improvised reflection and community connection.
       </p>
       <p class="subtitle fade-in">
-        Through light, movement, and material storytelling, I activate storefronts and shared spaces to foster intergenerational dialogue and creative care.
+        Ann K. Chou is an artist-scientist and researcher working with lanterns, shadow animation, improvised sound, and access-led performance. Her practice explores how meaning shifts across light, movement, language, and sensory difference.
+
+Drawing from lived experience as a hard-of-hearing Cantonese speaker, Chou develops adaptive methods rather than fixed representations. Lantern figures remain physically still while light moves, producing animated shadows that respond to proximity, pacing, and audience attention. Speech, captions, and bilingual wordplay are treated as evolving tools rather than complete systems.
+
+Her work spans performance, installation, workshops, and research-creation, often unfolding through iterative public tests rather than finished objects. Across contexts, she is interested in how access can function as a creative method—shaping form, rhythm, and shared spaces for intergenerational encounter and creative care.
       </p>
     </section>
 
@@ -485,3 +489,4 @@
 </body>
 
 </html>
+
