--- a/index.html
+++ b/index.html
@@ -115,6 +115,9 @@
       </p>
       <section id="practice-overview">
       <h2>Practice Overview</h2>
+        <p class="subtitle fade-in">
+        Through lanterns, shadow, and sound, Ann K. Chou invites audiences into inclusive, eco-conscious spaces of play, improvisation, and shared reflection.
+        </p>
         <p>Ann K. Chou is an artist-scientist and researcher working with lanterns, shadow animation, improvised sound, and access-led performance. 
         </p>
         <p>Her practice explores how meaning shifts across light, movement, language, and sensory difference.
@@ -499,5 +502,6 @@
 </body>
 
 </html>
+
 
 
