make p hero-text

--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
     </div>
   </header>
 
-  <div class="scroll-container">
+  <div class="scroll-container fade-carousel">
     <img src="rss/ann-reflection-try-it-yourself-table-exhibition-at-market_1692696342.webp" alt="Try-it-yourself table" />
     <img src="rss/AnnKChou1-Peacock Lantern  - made with broken umbrella  and pop bottle.jpg" alt="Peacock Lantern" />
     <img src="rss/AnnKChou3-Shadow-movement dance with lit banner painted by me.jpg" alt="Shadow Movement Dance" />
@@ -115,9 +115,10 @@
       </p>
       <section id="practice-overview">
       <h2>Practice Overview</h2>
-        <p class="subtitle fade-in">
-        Through lanterns, shadow, and sound, Ann K. Chou invites audiences into inclusive, eco-conscious spaces of play, improvisation, and shared reflection.
-        </p>
+        <p class="hero-text fade-in">
+          Lanterns that move. Shadows that tell. Sounds that guide.<br>
+          Inclusive, eco-conscious spaces for play, improvisation, and reflection.
+        </p>     
         <p>Ann K. Chou is an artist-scientist and researcher working with lanterns, shadow animation, improvised sound, and access-led performance. 
         </p>
         <p>Her practice explores how meaning shifts across light, movement, language, and sensory difference.
@@ -145,8 +146,8 @@
             <img src="rss/WaterRabbitTrop_storytelling.jpg" alt="Three illuminated rabbit sculptures with umbrellas sit beneath trees at night during rain. They are handmade with sumi-e brushwork and eco-friendly materials for the 2023 Renfrew Ravine Moon Festival." />
             <figcaption>“Storytelling Water Rabbits Trio” illuminated at the 2023 Renfrew Ravine Streamside Moon Festival.</figcaption>
           </figure>
-          <a href="https://www.instagram.com/annreflection/" class="cta glow">Upcoming & Events → IG </a>
-          <button class="accordion-toggle">🔻 Grunt Residency: Turtle & Rabbit Comrade</button>
+        
+          <button class="accordion-toggle">🔻 more: Turtle & Rabbit Comrade, Feminist_Dragon</button>
           <div class="accordion-content">
             <figure>
               <img src="rss/AC5_Turle_Rabbit_comrade_moon_cast.png" alt="Lantern installation, Turtle and Rabbit - Moonlit Vonyage Comrade, Renfrew Ravine Moon Festival 2025" />
@@ -155,12 +156,13 @@
               </figcaption>
             </figure>
             <figure>
-              <img src="rss/AC4_Feminist_Dragon_Boats_site_responsive.png.png" alt="Site-responsive Lantern installation, Feminist Dragon Boats, Tree-based: Winter Art Festival 2024, Ground-based: Renfrew Ravine Moon Festival 2024 " />
+              <img src="rss/AC4_Feminist_Dragon_Boats_site_responsive.png" alt="Site-responsive Lantern installation, Feminist Dragon Boats, Tree-based: Winter Art Festival 2024, Ground-based: Renfrew Ravine Moon Festival 2024 " />
               <figcaption>
                 Site-responsive Lantern installation, Feminist Dragon Boats, Tree-based: Winter Art Festival 2024, Ground-based: Renfrew Ravine Moon Festival 2024 .
               </figcaption>
             </figure>
           </div>
+            <a href="https://www.instagram.com/annreflection/" class="cta glow">More update & events → IG </a>
         </div>
         <div class="project">
           <h3>Eco-Illuminessence & Spoon Screendance</h3>
@@ -517,6 +519,7 @@
 </body>
 
 </html>
+
 
 
 
