--- a/index.html
+++ b/index.html
@@ -120,19 +120,15 @@
           Inclusive, eco-conscious spaces for play, improvisation, and reflection.
         </p>     
         <p>Ann K. Chou is an artist-scientist and researcher working with lanterns, shadow animation, improvised sound, and access-led performance. 
-        </p>
-        <p>Her practice explores how meaning shifts across light, movement, language, and sensory difference.
+        Her practice explores how meaning shifts across light, movement, language, and sensory difference.
         </p>
         <p>Grounded in lived experience as a hard-of-hearing Cantonese speaker, Chou develops adaptive methods rather than fixed representations. 
-       </p>
-        <p>Lantern figures remain physically still while light moves, producing animated shadows that respond to proximity, pacing, and audience attention. 
-        </p>
-        <p>Materials are chosen with care, often incorporating recycled or low-impact elements, supporting both accessibility and environmental awareness. 
-        <p>Speech, captions, and bilingual wordplay are treated as evolving tools rather than complete systems.
+         Lantern figures remain physically still while light moves, producing animated shadows that respond to proximity, pacing, and audience attention. 
+         Materials are chosen with care, often incorporating recycled or low-impact elements, supporting both accessibility and environmental awareness. 
+         Speech, captions, and bilingual wordplay are treated as evolving tools rather than complete systems.
         </p>
         <p>Her work spans performance, installation, workshops, and research-creation, often unfolding through iterative public tests rather than finished objects. 
-        </p>
-        <p>Across contexts, she is interested in how access can function as a creative method—shaping form, rhythm, and shared spaces for intergenerational encounter and creative care.
+        Across contexts, she is interested in how access can function as a creative method—shaping form, rhythm, and shared spaces for intergenerational encounter and creative care.
         </p>
     </section>
 
@@ -519,6 +515,7 @@
 </body>
 
 </html>
+
 
 
 
