add spoon vine roundhouse

--- a/index.html
+++ b/index.html
@@ -169,6 +169,24 @@
           </figure>
           
           <a href="Eco_illum.html" class="button glow-ink">Explore Eco-Illuminessence🌘 Project</a>
+
+          <button class="accordion-toggle">🔻 more: Spoons (Work-in-Progress Series)</button>
+          <div class="accordion-content">
+            <figure>
+              <img src="rss/AC2_SpoonDace_Dark_Outsider_Art_festival_2024_ShadowDance.png" 
+                alt="SpoonDance Indoor Dark version at Round House | Outsider Art festival_2024" />
+              <figcaption>
+                SpoonDance Indoor Dark version at Round House | Outsider Art festival_2024 
+              </figcaption>
+            </figure>
+            <figure>
+              <img src="rss/AC3_SpoonDance_DayVinesArt2023_ShadowDance.png" 
+                alt="SpoonDance Outdoor Solo at Trout Lake | Vines Art Festival 2023" />
+              <figcaption>
+                SpoonDance Outdoor Solo at Trout Lake | Vines Art Festival 2023 .
+              </figcaption>
+            </figure>
+          </div>
         </div>
         <div class="project">
           <h3>Sumi-e, Shoebox Stages, Sock Puppets & Lantern Making</h3>
@@ -188,8 +206,11 @@
 
     <section id="about">
       <h2>About Ann</h2>
-     <p>Ann K. Chou (she/her) is a hard-of-hearing, neurodivergent multi-sensory artist, access designer, artist-scientist, born in Hong Kong and currently active on the unceded lands of the lək̓ʷəŋən and xʷməθkʷəy̓əm peoples—also known as Victoria and Vancouver, BC.</p>
-     <p>Her practice bridges science and art—from microscope imaging to lantern-building—working with light, shadow, recycled materials, and movement to explore access, ecology, and collective care. Ann celebrates broken objects, spontaneous collaboration, and joyful inclusion through tactile installations, sumi-e brushwork, and mobile lantern sculptures.</p>
+     <p>Ann K. Chou (she/her) is a hard-of-hearing, neurodivergent multi-sensory artist, access designer, artist-scientist, born in Hong Kong 
+       and currently active on the unceded lands of the xʷməθkʷəy̓əm and lək̓ʷəŋən peoplw —also known as Vancouver and Victoria, BC.</p>
+     <p>Her practice bridges science and art—from microscope imaging to lantern-building—working with light, shadow, recycled materials, 
+       and movement to explore access, ecology, and collective care. 
+       Ann celebrates broken objects, spontaneous collaboration, and joyful inclusion through tactile installations, sumi-e brushwork, and mobile lantern sculptures.</p>
 
      <p><strong>She believes things are meant to break—and be beautifully rebuilt.</strong></p>
      <p>Her materials often include translucent fabrics, bamboo, garden clippings, mesh, and upcycled plastics, designed for multisensory engagement and adaptability across diverse environments.</p>
@@ -515,6 +536,7 @@
 </body>
 
 </html>
+
 
 
 
