embed youtude GULG0rJyHVU

--- a/Eco_illum.html
+++ b/Eco_illum.html
@@ -108,12 +108,21 @@
   </section>
 <section>
   <h2>🎞️ Highlights in Motion</h2>
-  <p>Below are brief clips capturing moments of improvisation and light-play. Full video below.</p>
+  <p>Below are brief clips capturing moments of improvisation and light-play. Video of full performance is still under production.</p>
 
+  <div class="video-grid">
+    <!-- Clip 1 -->
+    <div class="video-card">
+      <iframe 
+        src="https://www.youtube.com/embed/GULG0rJyHVU" 
+        title="Eco-Illum Clip 1" 
+        frameborder="0" 
+        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" 
+        allowfullscreen>
+      </iframe>
+    </div>
+  </div>
   <div style="display: flex; flex-wrap: wrap; gap: 1rem; justify-content: center;">
-    <!-- Placeholder 1 -->
-    <video src="videos/eco_clip1.mp4" controls muted playsinline style="max-width: 300px; border-radius: 10px; background: #000;"></video>
-
     <!-- Placeholder 2 -->
     <video src="videos/eco_clip2.mp4" controls muted playsinline style="max-width: 300px; border-radius: 10px; background: #000;"></video>
 
@@ -336,3 +345,4 @@
 
 </body>
 </html>
+
