add Eco-illuminessence: a sensory crossing (session 5/5- Jun 21, 2025) dual language open caption

--- a/Eco_illum.html
+++ b/Eco_illum.html
@@ -102,33 +102,33 @@
 
   <section>
     <h2>✦ A Sensory Crossing: The Performative Layer</h2>
-    <p>In performance, the fabric lantern sculptures became puppet-characters—animated not through traditional puppetry, but through <strong>light manipulation, shadow play, and direct interaction</strong>. The artist used handheld lights and live cameras to mobilize the shadows of these forms, transforming static objects into living silhouettes.</p>
-    <p>A live camera pointed at a flat, illuminated surface allowed the artist to paint directly with sumi-e ink. This surface functioned as both a projection canvas and a performance space. The live feed was projected onto surrounding surfaces, creating a layered visual field. Participants were invited to co-create scenes through movement, layering, and light.</p>
-    <p>This improvisational layer—<strong>a sensory crossing</strong>—allowed the visual art to speak back, poetically, through gesture and ephemeral choreography. It marked a turning point in the artist’s practice: a conversation between stillness and motion, installation and performance, object and presence.</p>.jpg
+    <p>In performance, the fabric lantern sculptures became puppet-characters—animated not through traditional puppetry,
+      but through <strong>light manipulation, shadow play, and direct interaction</strong>. The artist used handheld lights 
+      and live cameras to mobilize the shadows of these forms, transforming static objects into living silhouettes.</p>
+    <p>A live camera pointed at a flat, illuminated surface allowed the artist to paint directly with sumi-e ink. This surface 
+      functioned as both a projection canvas and a performance space. The live feed was projected onto surrounding surfaces,
+      creating a layered visual field. Participants were invited to co-create scenes through movement, layering, and light.</p>
+    <p>This improvisational layer—<strong>a sensory crossing</strong>—allowed the visual art to speak back, poetically, through 
+      gesture and ephemeral choreography. It marked a turning point in the artist’s practice: a conversation between stillness 
+      and motion, installation and performance, object and presence.</p>
   </section>
 <section>
   <h2>🎞️ Highlights in Motion</h2>
-  <p>Below are brief clips capturing moments of improvisation and light-play. Video of full performance is still under production.</p>
+  <p>Below are some brief clips capturing moments of improvisation and light-play. Video of full performance is at the bottom of the page.</p>
 
   <div class="video-grid">
     <!-- Clip 1 -->
     <div class="video-card">
       <iframe 
         src="https://www.youtube.com/embed/GULG0rJyHVU" 
-        title="Eco-Illum Clip 1" 
+        title="Eco-Illuminessence - Sensory Crossing (Session 2/5) - camera 1/3 Jun 15 2.5min cut" 
         frameborder="0" 
         allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" 
         allowfullscreen>
       </iframe>
     </div>
   </div>
-  <div style="display: flex; flex-wrap: wrap; gap: 1rem; justify-content: center;">
-    <!-- Placeholder 2 -->
-    <video src="videos/eco_clip2.mp4" controls muted playsinline style="max-width: 300px; border-radius: 10px; background: #000;"></video>
 
-    <!-- Placeholder 3 -->
-    <video src="videos/eco_clip3.mp4" controls muted playsinline style="max-width: 300px; border-radius: 10px; background: #000;"></video>
-  </div>
 </section>
 
   <section>
@@ -219,15 +219,20 @@
 </section>
 
 <section>
+    <!-- Full performance -->
   <h2>📺 Full Performance Recording</h2>
-  <p>Watch the full improvised light projection play recorded at Xchanges Gallery (June 15, 2025).</p>
+  <p>Watch the full improvised light projection play recorded at Xchanges Gallery (June 21, 2025).</p>
 
-  <div style="text-align: center;">
-    <video src="videos/eco_full_performance.mp4" controls style="width: 100%; max-width: 900px; border-radius: 12px; background-color: #000;"></video>
-
-    <!-- OR if hosted externally, use this instead: -->
-    <!-- <iframe src="https://www.youtube.com/embed/YOUR_VIDEO_ID" frameborder="0" allowfullscreen style="width:100%; max-width:900px; aspect-ratio: 16/9; border-radius: 12px;"></iframe> -->
+  <div class="full-video">
+    <iframe 
+      src="https://www.youtube.com/embed/3FMFYVdfpZQ" 
+      title="Eco-illuminessence: a sensory crossing (session 5/5- Jun 21, 2025) dual language open caption" 
+      frameborder="0" 
+      allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" 
+      allowfullscreen>
+    </iframe>
   </div>
+
 </section>
 
     
@@ -236,7 +241,7 @@
  <footer>
     <div class="flex-container2">
       <div class="flex-item-left">Art across generations: lanterns, sumi-e, movement & workshops</div>
-      <div class="flex-item-right">© 2025 Ann K. Chou (annreflection) – All rights reserved</div>
+      <div class="flex-item-right">© 2025-2026 Ann K. Chou (annreflection) – All rights reserved</div>
     </div>
   </footer>
 
@@ -345,4 +350,5 @@
 
 </body>
 </html>
+
 
