--- a/Eco_illum.html
+++ b/Eco_illum.html
@@ -129,6 +129,15 @@
     </div>
   </div>
 
+
+    <!-- Session 2 full excerpt -->
+  <h3 style="margin-top: 2rem;">📺 Session 2: Rough Cut Excerpt</h3>
+  <p><strong>Description:</strong> Eco-Illuminessence is an access-led performance-installation using animal-shaped lanterns, shifting light, shadow, and silence to create non-verbal and spoken narrative experiences. Structured as a visual poem, it unfolds through movement, image, and sensory cues, connected by rhythm, spatial relationships, and audience presence rather than fixed spoken language.</p>
+  
+  <p>This video excerpt is a rough edit from Session 2, Camera 1 of 3, showing several key components. The clip begins with live painting on sumi-e paper, projected onto the wall. Using multiple light sources—including a book projector and rainbow/sunset lighting—the artist manipulates brush ink and objects, transforming marks into rain over an umbrella. Staged elements include the rabbit mother with umbrella, paddle, Feminist Dragon Boat, bird, whale, bamboo with leaves, and two mini curtain stands, demonstrating how shadows animate lantern characters.</p>
+  
+  <p><em>Access note:</em> This clip includes improvised speech without captions. Dual-language captioning and other accessibility strategies were developed and tested in later performances, as part of the ongoing research trajectory. The ideas for captioning, reverse captioning tools, and Draw-Aloud Symptom/s (DAS) integration emerged after this performance and remain in development. The artist aims to prototype and gather feedback during the residency. Some elements—such as merging DAS with lantern-based social characters—are exploratory and may extend beyond the six-week residency to allow for iterative development.</p>
+ 
 </section>
 
   <section>
@@ -350,5 +359,6 @@
 
 </body>
 </html>
+
 
 
