--- a/Eco_illum.html
+++ b/Eco_illum.html
@@ -93,6 +93,13 @@
     <h2>📸 A Living Work in Progress</h2>
     <p><em>Eco-Illuminessence: A Sensory Crossing</em> is a cross-disciplinary body of work developed between 2024 and 2025, marking the artist’s first foray into performance. Rooted in her visual installation practice, this evolving series bridges sculptural form and live gesture—inviting audiences into a world of <strong>low-tech enchantment and quiet storytelling through light, shadow, and movement</strong>.</p>
     <p>Presented through <strong>two in-person showings</strong> and <strong>three livestreamed sessions</strong>—including a hybrid event at <strong>Xchanges Gallery</strong> (Victoria, BC)—this early iteration served as both a public offering and a developmental sketch. It became a space of experimentation, reflection, and transformation.</p>
+ 
+    <figure>
+      <img src="rss-eco/AC0_Ecoilluminescence-summary_n_reflection.png" alt="Ecoilluminescence - summary floor map and reflection." />
+        <figcaption>
+              Multi-compoent Ecoilluminescence as in Jun 2025 - summary floor map with pictures of compoents and reflection.
+        </figcaption>
+      </figure>
   </section>
 
   <section>
@@ -359,6 +366,7 @@
 
 </body>
 </html>
+
 
 
 
