--- a/index.html
+++ b/index.html
@@ -453,7 +453,7 @@
   <footer>
     <div class="flex-container2">
       <div class="flex-item-left">Art across generations: lanterns, sumi-e, movement & workshops</div>
-      <div class="flex-item-right">© 2025 Ann K. Chou (annreflection) – All rights reserved</div>
+      <div class="flex-item-right">© 2020-2026 Ann K. Chou (annreflection) – All rights reserved</div>
     </div>
   </footer>
         
@@ -536,6 +536,7 @@
 </body>
 
 </html>
+
 
 
 
