<!-- 1. Precedent Work: SPOONS -->

--- a/Eco_illum.html
+++ b/Eco_illum.html
@@ -33,7 +33,7 @@
   <header>
   <div class="topnav" id="myTopnav">
     <a href="index.html" class="logo">
-      <img src="rss/AnnReflectionBannerforLetter_clear.png" height="60" alt="Ann Chou logo" />
+      <img src="rss/WenAn_Annreflection_logo-icon_clear_bg.png" height="60" alt="Ann Chou logo" />
     </a>
     <a href="index.html">Home 🏠</a>
     <a href="artist_bio.html">Bio 🧬</a>
@@ -89,6 +89,40 @@
   <h1 class="site-title">Eco-Illuminessence: A Sensory Crossing</h1>
   <p class="highlight-subtitle">A hybrid installation-performance exploring light, shadow, and non-verbal storytelling</p>
 
+    <!-- 1. Precedent Work: SPOONS -->
+  <section id="precedent-work-spoons" style="margin-bottom: 2rem; line-height: 1.6;">
+  <h2 style="border-bottom: 2px solid #333; padding-bottom: 0.5rem;">🎬 Precedent Work: SPOONS</h2>
+  
+  <p>
+    <em>SPOONS</em> emerged from a cross-disability screen dance residency, connecting the lived experiences of five artists. 
+    <strong>Each of us created our own scene centered around the shared motif of the spoon, reinterpreting it as a symbol of resistance and disability pride.</strong>
+  </p>
+
+  <p>
+    In my contribution, I rendered the spoon as hand-folded paper origami. This was a deliberate artistic statement: the "spoon"—often seen only as a tool to measure our limitations—is not only something made <em>for</em> us, but also something that can be <strong>made <em>by</em> us</strong>.
+  </p>
+
+  <p>This work evolved from the screen into two distinct live solo performances:</p>
+
+  <ul style="list-style-type: none; padding-left: 0;">
+    <li style="margin-bottom: 1rem;">
+      <strong>📍 Vine Art Festival (2023):</strong> A daytime outdoor performance featuring live painting. Working within natural light, I used <strong>Tai Chi motions</strong> to sense the energy flow of the spoons through rice paper and "rabbit" banners, which were utilized as tied curtains.
+    </li>
+
+    <li style="margin-bottom: 1rem;">
+      <strong>📍 Vancouver Outsider Arts Festival (2024):</strong> A dark theater performance where I expanded the work into <strong>shadow dance</strong>. I integrated experimental live-object projection to animate the spoons and vases directly onto the banners, creating a layered visual narrative.
+    </li>
+  </ul>
+
+  <p>
+    In both iterations, movements were memorized arrangements of improvised gestures with intentionality. As an accessibility measure, I articulated the gestures with poetic tone and <strong>audio description</strong>. The set included a fabric banner painted by me years ago featuring a "mother rabbit" with her offspring on a seed-pod boat.
+  </p>
+
+  <p style="background-color: #f9f9f9; padding: 1rem; border-left: 4px solid #ccc;">
+    <em>SPOONS</em> directly informs <strong>Eco-Illuminessence</strong> by bringing shadow improvisation, object animation, and accessible, non-verbal storytelling into the heart of the installation-performance.
+  </p>
+</section>
+  
   <section>
     <h2>📸 A Living Work in Progress</h2>
     <p><em>Eco-Illuminessence: A Sensory Crossing</em> is a cross-disciplinary body of work developed between 2024 and 2025, marking the artist’s first foray into performance. Rooted in her visual installation practice, this evolving series bridges sculptural form and live gesture—inviting audiences into a world of <strong>low-tech enchantment and quiet storytelling through light, shadow, and movement</strong>.</p>
@@ -366,6 +400,7 @@
 
 </body>
 </html>
+
 
 
 
